Update Pull data from Web and API.ipynb

--- a/Pull data from Web and API.ipynb
+++ b/Pull data from Web and API.ipynb
@@ -574,7 +574,7 @@
     "# import json file and transfer JSON to DataFrame: if direct transfer, will be list**\n",
     "import pandas as pd\n",
     "import json\n",
-    "with open(\"C:/Users/xiaoj/Desktop/CS/collection of data science-take home challenges/Data/13. city_searches.json\",'r') as inf:\n",
+    "with open(\"~city_searches.json\",'r') as inf:\n",
     "    sessions = json.load(inf)\n",
     "\n",
     "sessions = pd.DataFrame(sessions)\n",
@@ -715,7 +715,7 @@
     "    return d\n",
     "\n",
     "\n",
-    "with open(\"C:/Users/xiaoj/Desktop/CS/collection of data science-take home challenges/Data/13. city_searches.json\", 'r') as inf:\n",
+    "with open(\"~ city_searches.json\", 'r') as inf:\n",
     "    sessions = json.load(inf)\n",
     "\n",
     "for item in sessions:\n",
